--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
               run: composer install --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist --optimize-autoloader
 
             - name: Run php-cs-fixer
-              run: composer format
+              run: ./vendor/bin/php-cs-fixer fix .
 
             - uses: stefanzweifel/git-auto-commit-action@v4
               with:
