--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,11 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/support": "^7.0"
+        "php": "^8.0"
     },
     "require-dev": {
-        "konceiver/laravel-stan": "^1.1",
-        "konceiver/stan": "^1.1"
+        "konceiver/laravel-stan": "^1.2",
+        "konceiver/stan": "^1.3"
     },
     "autoload": {
         "psr-4": {
